[gd_scene load_steps=7 format=2]

[ext_resource path="res://GUI/Themes/CyberTheme.tres" type="Theme" id=1]
[ext_resource path="res://GUI/Menus/EndScreen.gd" type="Script" id=2]
[ext_resource path="res://GUI/fonts/GoogleFonts/Gugi/Gugi-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://effects/UISlide.wav" type="AudioStream" id=5]
[ext_resource path="res://effects/clickNoise.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 3 )

[node name="EndScreen" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 264.0
margin_top = 87.0
margin_right = 760.0
margin_bottom = 512.0
size_flags_horizontal = 5
size_flags_vertical = 5

[node name="Panel" type="Panel" parent="MarginContainer"]
margin_right = 496.0
margin_bottom = 425.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
margin_right = 496.0
margin_bottom = 425.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 466.0
margin_bottom = 395.0

[node name="WinLose" type="MarginContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_right = 436.0
margin_bottom = 151.0
size_flags_vertical = 9

[node name="Win" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose"]
visible = false
margin_right = 436.0
margin_bottom = 151.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WinLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose/Win"]
margin_right = 864.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "You Win"
align = 1

[node name="WinText" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose/Win"]
margin_top = 101.0
margin_right = 864.0
margin_bottom = 201.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 3
size_flags_vertical = 8
bbcode_enabled = true

[node name="Lose" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose"]
margin_right = 436.0
margin_bottom = 151.0

[node name="LoseLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose/Lose"]
margin_right = 436.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "You Lose"
align = 1

[node name="LoseText" type="RichTextLabel" parent="MarginContainer/MarginContainer/VBoxContainer/WinLose/Lose"]
margin_top = 101.0
margin_right = 436.0
margin_bottom = 151.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 436.0
margin_bottom = 365.0

[node name="HSplitContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 68.0
margin_right = 368.0
margin_bottom = 210.0
custom_constants/separation = 30

[node name="Restart" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Restart"

[node name="Quit" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 130.0
rect_min_size = Vector2( 300, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"

[node name="BackToMainMenu" type="Button" parent="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer"]
margin_top = 160.0
margin_right = 300.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 50 )
text = "Back to Main Menu"

[node name="SlideNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="ClickNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/VBoxContainer/CenterContainer/HSplitContainer/BackToMainMenu" to="." method="_on_BackToMainMenu_pressed"]
